manifests/apps/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: application
  labels:
    name: application
