manifests/apps/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: fortiweb-ingress
  annotations: {
    "fortiweb-ip" : "10.0.0.4",
    "fortiweb-login" : "fortiweb-login-secret",
    "fortiweb-port": "8443",
    "fortiweb-ctrl-log" : "disable",  
    "virtual-server-ip" : "10.0.0.5",
    "virtual-server-addr-type" : "ipv4",
    "virtual-server-interface" : "port1",
    "server-policy-web-protection-profile" : "Inline Standard Protection",
    "server-policy-https-service" : "HTTPS",
    "server-policy-http-service" : "HTTP",
    "server-policy-syn-cookie" : "enable",
    "server-policy-http-to-https" : "disable"
  }
spec:
  ingressClassName: fwb-ingress-controller
  defaultBackend:
    service:
      name: dvwa
      port:
        number: 80
